--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.15.6",
     "moment": "^2.29.2",
+    "print-template": "^1.2.5",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.4.0"
