--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "echarts": "^5.3.2",
     "element-ui": "^2.15.6",
     "moment": "^2.29.2",
     "print-template": "^1.2.5",
     "vue": "^2.6.14",
+    "vue-animate-number": "^0.4.2",
     "vue-router": "^3.5.1",
     "vuex": "^3.4.0"
   },
