--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0"
   },
   "browserslist": [
     "> 1%",
